# CryptoRegimeShiftLOB

./: .gitattributes  .gitignore  AGENTS.md  ARTIFACTS.md  DATA_CARD.md  MoTa.md  README.md  REPRODUCIBILITY.md  SCHEMA.md  ThucNghiem.md  TongQuan.md  checksums.json  final_submission_readiness_report.md  fix_v1.md  fix_v2.md  guideline.md  pyproject.toml  requirements.txt  rule.md  supplementaryartifact_guide.md
Paper_ICDM_2026/: FINAL_POLISH_SUMMARY.md  REFERENCE_AUDIT.md  STYLE_EDIT_SUMMARY.md  audit_report.md  cited_keys.txt  custom.bib  fig_1_pipeline.tex  main.bbl  main.tex
artifacts/: audit_stage3_16_disk_cleanup_pre_purged_rerun_v001.md  cross_asset_calibration.csv  cross_asset_distribution_shift.csv  cross_asset_label_balance.csv  cross_asset_regime_counts.csv  cross_asset_source_only_protocol.csv  deeplob_full_cleanup_manifest.csv  deeplob_full_cleanup_manifest.json  model_selection_candidate_counts.csv  model_selection_ledger.csv  model_selection_overfitting_diagnostic.csv  reference_audit.csv  reference_coverage.csv  regime_audit.csv  split_audit.csv  split_audit.md  split_audit_purged.md  stage3_16_disk_cleanup_pre_purged_rerun_v001.csv  stage3_16_disk_cleanup_pre_purged_rerun_v001_post.csv
audits/: audit_deeplob_controlled_subsample_baseline_coverage.md  audit_deeplob_full_row_train_baseline.md  audit_p0_06_deep_lob_baseline_suite.md  audit_p1_08_regime_taxonomy_audit.md  audit_p1_09_cross_asset_transfer_asymmetry.md  audit_regime_refinement_v001.md  audit_stage3_10_tcn_stride1_fairness_check.md  audit_stage3_11_icdm_evidence_hardening.md  (+21 more)
(+448 files in other folders)
